<resources>
    <string name="app_name">FHEM-Monkey</string>
    <string name="settings">Settings</string>
    <string name="hostname">Hostname</string>
    <string name="port">Port</string>
    <string name="save">Save</string>
    <string name="saved_settings">Saved Settings</string>
    <string name="loading">Loading …</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="use_https">Use HTTPS</string>
    <string name="prefix_hint">Prefix ("/fhem")</string>
    <string name="authentication">Authentication</string>
    <string name="trust_certificates">Trust all Certificates (not recommended)</string>
    <string name="device_configuration_title">Device Configuration</string>
    <string name="import_devices">Import Devices</string>
    <string name="import_devices_successfull">Successfully imported devices</string>
</resources>
